--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/public/storage
 /.pnp
 .pnp.js
 
@@ -17,7 +18,26 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.mp4
+.mp3
+.mov
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
