--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "patronize-frond",
   "version": "0.1.0",
+  "homepage": "https://conrading.github.io/pervasive/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "fibers": "^5.0.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
     "sass": "^1.29.0",
     "typescript": "^3.9.7"
