--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "homepage": "https://conrading.github.io/pervasive/",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "react": "^17.0.1",
-    "react-player": "^2.6.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
