--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "patronize-frond",
   "version": "0.1.0",
-  "homepage": "https://conrading.github.io/pervasive/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
@@ -9,14 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,13 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "fibers": "^5.0.0",
-    "gh-pages": "^3.2.3",
-    "node-sass": "^4.14.1",
-    "sass": "^1.29.0",
-    "typescript": "^3.9.7"
   },
   "proxy": "http://localhost:5011"
 }
