--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /node_modules
 /backup
-/public/video
+/public
 /.pnp
 .pnp.js
 /src/component/http-axios.js
@@ -15,14 +15,14 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.mp4
-.mp3
-.mov
+*.DS_Store
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+*.mp4
+*.mp3
+*.mov
 
 npm-debug.log*
 yarn-debug.log*
